--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="map"></div>
+    <script src="https://unpkg.com/popmotion/dist/popmotion.global.min.js"></script>
     <script>
       /*
        * 📝 TODO:
@@ -429,7 +430,7 @@
       // If you fork or copy this mapbox, pretty pleae create your own *FREE* API key on maptiler.com
       const initMapbox = async () => {
         const response = await fetch(
-          "https://api.maptiler.com/maps/hybrid/?key=n1dhEynACZ6EW5JYE5D5#1.0/0.00000/0.00000"
+          "https://api.maptiler.com/maps/hybrid/style.json?key=n1dhEynACZ6EW5JYE5D5"
         );
         try {
           if (!response.ok) throw Error(response.statusText);
