--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="map"></div>
-    <script src="https://unpkg.com/popmotion@11.0.3/dist/popmotion.min.js"></script>
+    <script src="https://unpkg.com/popmotion@7.8.2/dist/popmotion.xl.min.js"></script>
     <script>
       /*
        * 📝 TODO:
