--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.scss" />
     <title>Animated Map</title>
   </head>
   <body>
