--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
                 "https://c1.staticflickr.com/5/4241/35467523155_346b08810f_q.jpg",
               type: "beach",
               iconSize: [60, 60],
+              description:
+                "<strong>Mad Men Season Five Finale Watch Party</strong><p>Head to Lounge 201 (201 Massachusetts Avenue NE) Sunday for a Mad Men Season Five Finale Watch Party, complete with 60s costume contest, Mad Men trivia, and retro food and drink. 8:00-11:00 p.m. $10 general admission, $20 admission and two hour open bar.</p>",
             },
             geometry: {
               type: "Point",
